# skkf-online-exhibition-backend

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/: main.py
src/api/: __init__.py
src/api/v1/: __init__.py  guest.py
src/core/: app_config.py  config.py  gunicorn_config.py
src/crud/: __init__.py  base.py  guest.py
src/schema/: __init__.py  base_crud.py
src/schema/guest/: __init__.py  crud.py
src/schema/guest/response_example/: __init__.py  create.py  delete.py  get_multi.py
src/schema/response_example/: __init__.py  base_response.py  create.py  delete.py  get_multi.py  update.py
