[tool.poetry]
name = "skku-design-deparment-online-exhibition-backend"
version = "1"
description = "Sungkyunkwan University Design Department Online Exhibition Backend"
authors = ["H4MMER.studio"]
license = "Apache"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
