[tool.poetry]
name = "skku-design-deparment-online-exhibition-backend"
version = "1"
description = "Sungkyunkwan University Design Department Online Exhibition Backend"
authors = ["H4MMER.studio"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
motor = "^3.0.0"
python-dotenv = "^0.20.0"
dnspython = "^2.2.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
isort = "^5.10.1"
black = "^22.3.0"
pre-commit = "^2.19.0"
mypy = "^0.961"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
